--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-backend",
   "version": "1.0.0",
-  "main": "server.js", 
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -19,4 +19,3 @@
     "supertest": "^6.3.3"
   }
 }
-
